[package]
name = "reinhardt-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core components for Reinhardt framework"
keywords = ["web", "framework", "django", "rust", "async"]
categories = ["web-programming", "web-programming::http-server"]
readme = "README.md"
documentation = "https://docs.rs/reinhardt-core"

[dependencies]
# Re-export all internal crates
reinhardt-macros = { workspace = true, optional = true }

# External dependencies for re-export
serde = { workspace = true, features = ["derive"], optional = true}
serde_json = { workspace = true }
async-trait = { workspace = true }
inventory = "0.3"
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_urlencoded = { workspace = true }
http = { workspace = true }
base64 = "0.22"
percent-encoding = "2.3"
url = "2.5"
bytes = "1.0"
multer = "3.0"
mime = "0.3"
futures-util = "0.3"
urlencoding = "2.1"
quick-xml = { version = "0.38.3", optional = true }
serde_yaml = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
brotli = { workspace = true, optional = true }
rmp-serde = { workspace = true }
prost = { workspace = true }
serial_test = { workspace = true, optional = true }
aquamarine = { workspace = true, optional = true }
image = { workspace = true, optional = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = { workspace = true }
ipnet = "2.10"
regex = "1.11"
chrono = { workspace = true }
once_cell = "1.20"
typed-arena = "2.0"
serde-xml-rs = { version = "0.8.1", optional = true }
parking_lot = "0.12"
smallvec = { workspace = true }
tracing = { workspace = true }
fluent-bundle = { version = "0.15", optional = true }

# Server-side dependencies (not available on WASM)
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
tokio = { workspace = true, features = ["rt", "sync", "time"] }
hyper = { workspace = true }
jsonschema = { version = "0.26", optional = true }
rayon = { version = "1.10", optional = true }
unic-langid = { version = "0.9", optional = true }
uuid = { version = "1.7", features = ["v4", "v7", "serde"] }

# WASM-specific dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
web-sys = { version = "0.3", features = ["Event"] }
wasm-bindgen = "0.2"
uuid = { version = "1.7", features = ["v4", "v7", "serde", "js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = [
  "types",
  "exception",
  "signals",
  "macros",
  "security",
  "validators",
  "image-validation",
  "serializers",
]

# Module features (conditionally compiled when feature is enabled)
types = []
exception = ["validators"]
signals = ["serde"]
security = []
validators = ["serde"]
image-validation = ["dep:image", "validators"]
serializers = ["serde"]
messages = ["serde"]
negotiation = []
parsers = []
compressed-parsers = ["parsers", "dep:brotli", "dep:flate2"]
pagination = ["serde"]
reactive = []

# Page types feature
page = ["types"]

# External dependency features
macros = ["dep:reinhardt-macros"]

# Aggregate all core features
core-full = [
  "types",
  "exception",
  "signals",
  "macros",
  "security",
  "validators",
  "image-validation",
  "serializers",
  "messages",
  "negotiation",
  "parsers",
  "compressed-parsers",
  "pagination",
  "reactive",
  "full",
  "reinhardt-macros?/full",
]

# Full feature with all optional functionality
full = ["compressed-parsers", "i18n", "image-validation", "json", "jsonschema", "page", "parallel", "serde", "std", "xml", "yaml"]
std = []
json = []
xml = ["dep:quick-xml", "dep:serde-xml-rs"]
yaml = ["dep:serde_yaml"]
serde = ["dep:serde"]
jsonschema = ["dep:jsonschema"]
parallel = ["dep:rayon"]
i18n = ["dep:fluent-bundle", "dep:unic-langid"]
doc-diagrams = ["dep:aquamarine"]

[build-dependencies]
cfg_aliases = "0.2"

[dev-dependencies]
insta = { workspace = true }
tokio = { version = "1", features = ["full", "macros", "rt", "test-util"] }
bytes = "1.0"
hyper = "1.0"
tokio-test = "0.4"
serial_test = { workspace = true }
rstest = { workspace = true }
