[package]
name = "reinhardt-db-macros"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Procedural macros for Reinhardt database layer (ORM and NoSQL ODM)"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
bson = "3.0"
serde = { workspace = true, features = ["derive"] }
rstest = { workspace = true }
