[package]
name = "reinhardt-db-macros"
version = "0.1.0-rc.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Procedural macros for Reinhardt database layer (ORM and NoSQL ODM)"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
bson = { version = "3.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
rstest = { workspace = true }
reinhardt-db = { path = "../reinhardt-db", features = ["nosql", "mongodb"] }
