[package]
name = "reinhardt-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Django-style database layer for Reinhardt framework"

[dependencies]
# Internal crates (optional)
reinhardt-backends = { workspace = true, optional = true }
reinhardt-backends-pool = { workspace = true, optional = true }
reinhardt-pool = { workspace = true, optional = true }
reinhardt-orm = { workspace = true, optional = true }
reinhardt-migrations = { workspace = true, optional = true }
reinhardt-hybrid = { workspace = true, optional = true }
reinhardt-associations = { workspace = true, optional = true }
reinhardt-contenttypes = { workspace = true, optional = true }
reinhardt-nosql = { workspace = true, optional = true }

# Database drivers and query builders
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "chrono",
  "sqlite",
  "postgres",
  "mysql",
  "macros",
  "migrate",
] }
sea-query = { version = "1.0.0-rc.29", features = [
  "backend-postgres",
  "backend-mysql",
  "backend-sqlite",
  "sqlx-utils",
] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"

[features]
default = [
  "backends",
  "pool",
  "postgres",
  "orm",
  "migrations",
  "hybrid",
  "associations",
]

# Module features
backends = ["dep:reinhardt-backends"]
backends-settings = ["backends", "reinhardt-backends/settings"]

# DI integration - enables Injectable implementation for DatabaseConnection
di = ["reinhardt-backends/di", "reinhardt-orm/di"]

# Internal crate features
pool = ["dep:reinhardt-backends-pool", "dep:reinhardt-pool"]
orm = ["dep:reinhardt-orm"]
migrations = ["dep:reinhardt-migrations"]
hybrid = ["dep:reinhardt-hybrid"]
associations = ["dep:reinhardt-associations"]
contenttypes = ["dep:reinhardt-contenttypes"]
nosql = ["dep:reinhardt-nosql"]

# Aggregate all database features
database-full = [
  "backends",
  "backends-settings",
  "di",
  "pool",
  "orm",
  "migrations",
  "hybrid",
  "associations",
  "contenttypes",
  "all-databases",
  "reinhardt-backends/full",
  "reinhardt-backends-pool/full",
  "reinhardt-pool/full",
  "reinhardt-orm/full",
  "reinhardt-migrations/full",
  "reinhardt-hybrid/full",
  "reinhardt-associations/full",
  "reinhardt-contenttypes/full",
]

# Database-specific features
postgres = [
  "sqlx/postgres",
  "reinhardt-orm/postgres",
  "reinhardt-migrations/postgres",
  "reinhardt-backends/postgres",
]
sqlite = [
  "sqlx/sqlite",
  "reinhardt-orm/sqlite",
  "reinhardt-migrations/sqlite",
  "reinhardt-backends/sqlite",
]
mysql = [
  "sqlx/mysql",
  "reinhardt-orm/mysql",
  "reinhardt-migrations/mysql",
  "reinhardt-backends/mysql",
]
# NoSQL database features
nosql-all = ["nosql", "reinhardt-nosql/nosql-all"]

cockroachdb-backend = ["postgres"] # CockroachDB uses PostgreSQL protocol
all-databases = [
  "postgres",
  "sqlite",
  "mysql",
  "cockroachdb-backend",
]

[dev-dependencies]
tokio-test = "0.4"
