[package]
name = "reinhardt-db"
version = "0.1.0-alpha.18"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Django-style database layer for Reinhardt framework"

[dependencies]
# Internal crates (optional)

# Database drivers and query builders
sqlx = { version = "0.8", features = [
  "any",
  "chrono",
  "json",
  "macros",
  "migrate",
  "mysql",
  "postgres",
  "runtime-tokio",
  "rust_decimal",
  "sqlite",
  "tls-rustls",
  "uuid",
] }
reinhardt-query = { workspace = true, features = ["full", "thread-safe"] }

# Async runtime
tokio = { version = "1.41", features = ["full", "macros", "rt", "sync"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
reinhardt-core = { workspace = true, features = ["exception", "macros", "types", "validators"]}
tracing = { workspace = true }
pg_escape = "0.1.1"
futures = { workspace = true }
rust_decimal = { workspace = true }
reinhardt-di = { workspace = true, optional = true }
reinhardt-conf = { workspace = true, optional = true, features = ["settings"]}
once_cell = "1.19"
parking_lot = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
indicatif = "0.18.0"
aho-corasick = "1.1"
petgraph = "0.8.3"
regex = "1.11"
strsim = "0.11"
indexmap = "2.7"
linkme = { workspace = true }
toml = "0.8"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
walkdir = "2.5"
aquamarine = { workspace = true }
mongodb = { version = "3.0", optional = true, features = ["bson-3"] }
bson = { version = "3.0.0", optional = true }
redis = { workspace = true, optional = true, features = ["tokio-comp", "cluster-async"] }
cassandra-cpp = { version = "3.0", optional = true }
aws-sdk-dynamodb = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }
neo4rs = { version = "0.7", optional = true }
anyhow = { workspace = true }
dashmap = "6.1.0"
base64 = "0.22"
lazy_static = "1.4"
refinery = { workspace = true, optional = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
image = { workspace = true }
flate2 = { workspace = true }
phonenumber = { workspace = true }
smallvec = "1.13"
paste = "1.0"

[features]
default = [
  "backends",
  "pool",
  "postgres",
  "orm",
  "migrations",
  "hybrid",
  "associations",
]

# Module features (modules are always compiled, features for backwards compatibility)
backends = []
backends-pool = []
pool = []
orm = []
migrations = ["refinery"]
hybrid = []
associations = []
contenttypes = []
nosql = ["dep:bson"]
backends-settings = ["backends"]

# DI integration - enables Injectable implementation for DatabaseConnection
di = ["reinhardt-di"]

# Aggregate all database features
database-full = [
  "backends",
  "backends-settings",
  "di",
  "pool",
  "orm",
  "migrations",
  "hybrid",
  "associations",
  "contenttypes",
  "all-databases",
  "full",
]

# Database-specific features
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]

# NoSQL database features
nosql-all = ["cassandra", "dynamodb", "mongodb", "neo4j", "nosql", "redis"]

cockroachdb-backend = ["postgres"] # CockroachDB uses PostgreSQL protocol
all-databases = [
  "postgres",
  "sqlite",
  "mysql",
  "cockroachdb-backend",
]
full = ["advanced-queries", "all-databases", "database", "db-mysql", "db-postgres", "db-sqlite", "di", "migrations", "mysql", "nosql-all", "pooling", "postgres", "settings", "sqlite"]
settings = ["dep:reinhardt-conf"]
database = []
db-sqlite = []
db-postgres = []
db-mysql = []
mongodb = ["dep:mongodb", "nosql"]
redis = ["dep:redis"]
cassandra = ["dep:cassandra-cpp"]
dynamodb = ["dep:aws-sdk-dynamodb", "dep:aws-config"]
neo4j = ["dep:neo4rs"]
nosql-document = ["mongodb"]
nosql-key-value = ["redis", "dynamodb"]
nosql-column = ["cassandra"]
nosql-graph = ["neo4j"]
pooling = []
advanced-queries = []
integration-tests = []

[dev-dependencies]
tokio-test = "0.4"
rstest = { workspace = true }
serial_test = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
tokio = { workspace = true, features = ["full", "macros", "rt", "test-util", "time"]}
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
uuid = { workspace = true }
serde_json = "1.0"
rust_decimal = { workspace = true }
tempfile = { workspace = true }
proptest = "1.5"
trybuild = "1.0"
ctor = "0.6.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
