[package]
name = "reinhardt-db"
version = "0.3.0-rc.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Django-style database layer for Reinhardt framework"
keywords = ["database", "orm", "django", "rust", "async"]
categories = ["database", "web-programming"]
readme = "README.md"
documentation = "https://docs.rs/reinhardt-db"

[dependencies]
# Internal crates (optional)

# Database drivers and query builders
sqlx = { version = "0.8", features = [
  "any",
  "chrono",
  "json",
  "macros",
  "migrate",
  "mysql",
  "postgres",
  "runtime-tokio",
  "rust_decimal",
  "sqlite",
  "tls-rustls",
  "uuid",
], optional = true }
reinhardt-query = { workspace = true, features = ["full", "thread-safe"], optional = true }

# Async runtime
tokio = { version = "1.41", features = ["full", "macros", "rt", "sync"], optional = true }
async-trait = { version = "0.1", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.11", features = ["v4", "v7", "serde"], optional = true }

# Error handling
thiserror = { version = "2.0", optional = true }
reinhardt-core = { workspace = true, features = ["exception", "macros", "types", "validators"]}
tracing = { workspace = true, optional = true }
pg_escape = { version = "0.1.1", optional = true }
futures = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
reinhardt-di = { workspace = true, optional = true }
reinhardt-conf = { workspace = true, optional = true, features = ["settings"]}
once_cell = { version = "1.19", optional = true }
parking_lot = { workspace = true, optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
console = { version = "0.16.1", optional = true }
dialoguer = { version = "0.12.0", optional = true }
indicatif = { version = "0.18.0", optional = true }
aho-corasick = { version = "1.1", optional = true }
petgraph = { version = "0.8.3", optional = true }
regex = { version = "1.11", optional = true }
strsim = { version = "0.11", optional = true }
indexmap = { version = "2.7", optional = true }
linkme = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
syn = { version = "2.0", features = ["full", "parsing"], optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
prettyplease = { version = "0.2", optional = true }
walkdir = { version = "2.5", optional = true }
aquamarine = { workspace = true, optional = true }
mongodb = { version = "3.0", optional = true, features = ["bson-3"] }
bson = { version = "3.0.0", optional = true }
redis = { workspace = true, optional = true, features = ["tokio-comp", "cluster-async"] }
cassandra-cpp = { version = "3.0", optional = true }
aws-sdk-dynamodb = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }
time = { workspace = true, optional = true }
neo4rs = { version = "0.7", optional = true }
anyhow = { workspace = true, optional = true }
dashmap = { version = "6.1.0", optional = true }
base64 = { version = "0.22", optional = true }
lazy_static = { version = "1.4", optional = true }
refinery = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
image = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
phonenumber = { workspace = true, optional = true }
smallvec = { version = "1.13", optional = true }
paste = { version = "1.0", optional = true }

[features]
default = [
  "backends",
  "pool",
  "postgres",
  "orm",
  "migrations",
  "hybrid",
  "associations",
  "image-fields",
  "compressed-fields",
]

# Module features (conditionally compiled when feature is enabled)
db-deps = [
  "dep:aes-gcm",
  "dep:aho-corasick",
  "dep:anyhow",
  "dep:aquamarine",
  "dep:async-trait",
  "dep:base64",
  "dep:chrono",
  "dep:clap",
  "dep:console",
  "dep:dashmap",
  "dep:dialoguer",
  "dep:futures",
  "dep:indexmap",
  "dep:indicatif",
  "dep:lazy_static",
  "dep:linkme",
  "dep:once_cell",
  "dep:parking_lot",
  "dep:paste",
  "dep:petgraph",
  "dep:pg_escape",
  "dep:phonenumber",
  "dep:prettyplease",
  "dep:proc-macro2",
  "dep:quote",
  "dep:rand",
  "dep:regex",
  "dep:reinhardt-query",
  "dep:rust_decimal",
  "dep:serde",
  "dep:serde_json",
  "dep:sha2",
  "dep:smallvec",
  "dep:sqlx",
  "dep:strsim",
  "dep:syn",
  "dep:thiserror",
  "dep:tokio",
  "dep:toml",
  "dep:tracing",
  "dep:uuid",
  "dep:walkdir",
]
model-info = []
backends = ["db-deps", "pool"]
backends-pool = ["db-deps", "pool"]
pool = ["db-deps"]
orm = ["backends", "db-deps", "hybrid"]
migrations = ["db-deps", "dep:refinery"]
hybrid = ["db-deps"]
associations = ["db-deps"]
contenttypes = ["db-deps"]
image-fields = ["db-deps", "dep:image"]
compressed-fields = ["db-deps", "dep:flate2"]
nosql = ["db-deps", "dep:bson"]
backends-settings = ["backends", "db-deps"]

# DI integration - enables Injectable implementation for DatabaseConnection
di = ["db-deps", "reinhardt-di"]

# Aggregate all database features
database-full = [
  "backends",
  "backends-settings",
  "di",
  "pool",
  "orm",
  "migrations",
  "hybrid",
  "associations",
  "contenttypes",
  "compressed-fields",
  "image-fields",
  "all-databases",
  "full",
]

# Database-specific features
postgres = ["db-deps", "sqlx/postgres"]
sqlite = ["db-deps", "sqlx/sqlite"]
mysql = ["db-deps", "sqlx/mysql"]

# NoSQL database features
nosql-all = ["cassandra", "dynamodb", "mongodb", "neo4j", "nosql", "redis"]

cockroachdb-backend = ["postgres"] # CockroachDB uses PostgreSQL protocol
all-databases = [
  "postgres",
  "sqlite",
  "mysql",
  "cockroachdb-backend",
]
full = ["advanced-queries", "all-databases", "database", "db-mysql", "db-postgres", "db-sqlite", "di", "migrations", "mysql", "nosql-all", "pooling", "postgres", "settings", "sqlite"]
settings = ["db-deps", "dep:reinhardt-conf"]
database = ["db-deps"]
db-sqlite = ["db-deps"]
db-postgres = ["db-deps"]
db-mysql = ["db-deps"]
mongodb = ["db-deps", "dep:mongodb", "nosql"]
redis = ["db-deps", "dep:redis"]
cassandra = ["db-deps", "dep:cassandra-cpp"]
dynamodb = ["db-deps", "dep:aws-sdk-dynamodb", "dep:aws-config", "time"]
neo4j = ["db-deps", "dep:neo4rs"]
nosql-document = ["mongodb"]
nosql-key-value = ["redis", "dynamodb"]
nosql-column = ["cassandra"]
nosql-graph = ["neo4j"]
pooling = ["db-deps"]
advanced-queries = ["db-deps"]
integration-tests = ["db-deps"]

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
uuid = { workspace = true }
serde_json = "1.0"
rust_decimal = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
trybuild = "1.0"
ctor = "0.6.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
tokio-test = "0.4"
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
tokio = { workspace = true, features = ["full", "macros", "rt", "test-util", "time"]}
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
