[package]
name = "reinhardt-deeplink"
version = "0.1.0-alpha.24"
edition.workspace = true
license.workspace = true
description = "Mobile app deep linking with iOS Universal Links, Android App Links, and custom URL schemes"
repository.workspace = true
authors.workspace = true

[dependencies]
# Core framework
reinhardt-core = { workspace = true }
reinhardt-http = { workspace = true }
reinhardt-urls = { workspace = true }

# Async support
async-trait = { workspace = true }
tokio = { workspace = true }

# HTTP
hyper = { workspace = true }

# Bytes handling
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
# Testing framework
rstest = { workspace = true }
