[package]
name = "reinhardt-deeplink"
version = "0.2.0-rc.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mobile app deep linking with iOS Universal Links, Android App Links, and custom URL schemes"
repository.workspace = true
authors.workspace = true

[dependencies]
# Core framework
reinhardt-conf = { workspace = true, features = ["settings"] }
reinhardt-core = { workspace = true, features = ["exception"] }
reinhardt-http = { workspace = true }
reinhardt-urls = { workspace = true }

# Async support
async-trait = { workspace = true }
tokio = { workspace = true }

# HTTP
hyper = { workspace = true }

# Bytes handling
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

[features]
full = []

[dev-dependencies]
insta = { workspace = true }
# Testing framework
rstest = { workspace = true }
