[package]
name = "reinhardt-dentdelion"
version = "0.1.0-rc.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Plugin system for Reinhardt framework - easy to create, distribute, and install"

[features]
default = []
full = ["wasm", "cli"]

# WASM plugin support (requires wasmtime with Component Model)
wasm = [
	"dep:wasmtime",
	"dep:wasmtime-wasi",
	"dep:rmp-serde",
	"tokio/rt",
	"tokio/fs",
	"dep:reqwest",
	"dep:reinhardt-db",
	"dep:sqlparser",
]

# CLI support (for crates.io integration)
cli = ["dep:crates_io_api", "dep:reqwest"]

# JavaScript runtime SSR support (boa_engine based)
# Enables JavaScript SSR for WASM plugins using pure Rust ECMAScript engine
ts = ["wasm", "dep:boa_engine", "dep:scraper"]

[dependencies]
# Core dependencies
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Semantic versioning
semver = "1.0"

# TOML parsing and editing
toml = { workspace = true }
toml_edit = "0.23"

# Compile-time registration (for static plugins)
inventory = "0.3"

# Thread-safe collections
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }

# WASM runtime (optional)
# Constraints:
# - Memory limit: 128MB default (configurable via WasmPluginConfig)
# - Execution timeout: 30 seconds default (configurable)
# - Models capability is NOT supported in WASM (requires compile-time integration)
wasmtime = { version = "39.0.1", optional = true, features = [
	"component-model",
	"async",
	"cranelift",
] }
wasmtime-wasi = { version = "39.0.1", optional = true }
rmp-serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# CLI support (optional)
crates_io_api = { version = "0.12.0", optional = true }
reqwest = { workspace = true, optional = true }

# Database access (optional, for WASM plugins)
# SQL parser for query validation (used with wasm feature)
sqlparser = { version = "0.53", optional = true }

# JavaScript runtime (optional, for SSR support)
# Provides pure Rust JavaScript execution for React/Preact SSR
# Note: boa_engine is a pure Rust ECMAScript engine with no external dependencies
boa_engine = { version = "0.21", optional = true }

# HTML parsing (optional, for CSS/Meta extraction in SSR)
scraper = { version = "0.22", optional = true }

# URL parsing (for SSRF validation)
url = { workspace = true }

# Documentation
aquamarine = { workspace = true }
reinhardt-db = {workspace = true, features = ["backends"], optional = true}

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
rstest = { workspace = true }
