[package]
name = "reinhardt-deploy"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Vercel-inspired deployment engine for Reinhardt web framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9"
tera = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sha2 = "0.10"
chrono = { workspace = true }
colored = "3.0.0"
dialoguer = "0.12.0"
rust-embed = "8.5"
regex = { workspace = true }
syn = { version = "2.0", features = ["full", "parsing"] }
walkdir = "2.5"
which = "7.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.13"
rstest = { workspace = true }
serial_test = { workspace = true }
