
[package]
name = "reinhardt-di"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Dependency injection system for Reinhardt, inspired by FastAPI"

[dependencies]
reinhardt-http = { workspace = true }

# Internal crates
di = { path = "crates/di", version = "0.1.0-alpha.1", package = "reinhardt-di-core" }
reinhardt-params = { path = "crates/params", version = "0.1.0-alpha.1", optional = true }

tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
dashmap = "6.1"
once_cell = "1.20"
indexmap = { version = "2.0", optional = true }
genawaiter = { version = "0.99", optional = true }

[features]
default = []
params = ["dep:reinhardt-params"]
dev-tools = ["dep:indexmap"]
generator = ["dep:genawaiter"]

[dev-dependencies]
tokio = { workspace = true }
futures = "0.3"
bytes.workspace = true
hyper.workspace = true
serial_test = { workspace = true }
reinhardt-apps = { workspace = true }
reinhardt-types = { path = "../reinhardt-core/crates/types" }
reinhardt-exception = { path = "../reinhardt-core/crates/exception" }
serde = { workspace = true }
