
[package]
name = "reinhardt-di"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Dependency injection system for Reinhardt, inspired by FastAPI"

[[bin]]
name = "check-di"
path = "src/bin/check-di.rs"

[dependencies]
reinhardt-http = { workspace = true }
reinhardt-exception = { workspace = true }

# Internal crates
reinhardt-params = { workspace = true, optional = true }
reinhardt-di-macros = { workspace = true, optional = true }

tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
dashmap = "6.1"
once_cell = "1.20"
inventory = "0.3"
indexmap = { version = "2.0", optional = true }
genawaiter = { version = "0.99", optional = true }

[features]
default = []
params = ["dep:reinhardt-params"]
macros = ["dep:reinhardt-di-macros"]
dev-tools = ["dep:indexmap"]
generator = ["dep:genawaiter"]
di-full = [
  "params",
  "macros",
  "dev-tools",
  "generator",
  "reinhardt-params/full",
]

[dev-dependencies]
tokio = { workspace = true }
futures = "0.3"
bytes.workspace = true
hyper.workspace = true
serial_test = { workspace = true }
reinhardt-core = { workspace = true, features = ["types", "exception"] }
reinhardt-params = { workspace = true }
serde = { workspace = true }
