[package]
name = "reinhardt-dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "URL dispatcher and request routing for Reinhardt framework"

[dependencies]
# Core dependencies
reinhardt-urls = { workspace = true }
reinhardt-routers = { path = "../reinhardt-urls/crates/routers" }
reinhardt-http = { workspace = true }
reinhardt-views = { workspace = true }
reinhardt-middleware = { workspace = true }
reinhardt-types = { path = "../reinhardt-core/crates/types" }
reinhardt-signals = { path = "../reinhardt-core/crates/signals" }
reinhardt-exception = { path = "../reinhardt-core/crates/exception" }
bytes = { workspace = true }

# HTTP
hyper = { workspace = true }
http = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
bytes = { workspace = true }
tokio-test = "0.4"
serde_json = { workspace = true }
