[package]
name = "reinhardt-forms"
version = "0.1.0-rc.1"
description = "Form handling and validation"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Documentation
aquamarine = "0.5"

# Internal dependencies
reinhardt-core = { workspace = true, features = ["validators"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Crypto
subtle = "2"
sha2 = "0.10"

# Regex
regex = "1.10"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

[features]
full = []

[dev-dependencies]
tokio-test = "0.4"
rstest = { workspace = true }
proptest = "1.6"
tempfile = "3"
reinhardt-test = { workspace = true }
