[package]
name = "reinhardt-forms"
version = "0.1.0-rc.23"
description = "Form handling and validation"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Documentation
aquamarine = "0.5"

# Internal dependencies
reinhardt-core = { workspace = true, features = ["validators"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Crypto
subtle = "2"
sha2 = "0.10"

# Regex
regex = "1.10"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

[features]
full = []

[dev-dependencies]
insta = { workspace = true }
tokio-test = "0.4"
rstest = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
# Workaround for KI-2 (rust-lang/cargo#4242, rust-lang/cargo#15151):
# Path-only dev-dep (no version) is stripped from published manifest by cargo,
# avoiding dev-dependency version resolution failure during `cargo publish`.
# When upstream cargo resolves these issues, replace with `workspace = true`.
reinhardt-test = { path = "../reinhardt-test" }
