[package]
name = "reinhardt-graphql"
version = "0.1.0-alpha.8"
description = "GraphQL API support for Reinhardt (facade crate)"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["di"]
# GraphQL facade over gRPC for Query/Mutation
graphql-grpc = [
  "dep:reinhardt-grpc",
  "dep:reinhardt-graphql-macros",
  "dep:tonic",
  "dep:chrono",
]
# gRPC-based Subscriptions (Rust 2024 compatible)
subscription = [
  "dep:reinhardt-grpc",
  "dep:reinhardt-graphql-macros",
  "dep:tonic",
  "dep:chrono",
]
# Dependency injection support
di = ["dep:reinhardt-di", "dep:reinhardt-graphql-macros"]
# All features enabled
full = ["graphql-grpc", "subscription", "di"]

[dependencies]
# Core dependencies (merged from graphql-core)
async-graphql = "7.0"
async-graphql-warp = "7.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dashmap = "6.1"
async-trait = { workspace = true }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
tracing = { workspace = true }
uuid = { workspace = true }

# gRPC support (optional)
reinhardt-grpc = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

# DI support (optional)
reinhardt-di = { workspace = true, optional = true }

# Re-export macros when features are enabled
reinhardt-graphql-macros = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
reinhardt-test = { workspace = true, features = ["testcontainers"] }
rstest = { workspace = true }
trybuild = { workspace = true }
