[package]
name = "reinhardt-grpc"
version.workspace = true
description = "gRPC support for building RPC services"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
protox = "0.9.0"

[dev-dependencies]
tokio-test = { workspace = true }
