[package]
name = "reinhardt-grpc"
version = "0.1.0-alpha.5"
description = "gRPC support for building RPC services"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# DI support (optional)
reinhardt-di = { workspace = true, optional = true }
reinhardt-grpc-macros = { workspace = true, optional = true }

[features]
default = []
full = ["di"]
di = ["reinhardt-di", "reinhardt-grpc-macros"]

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
tracing = { workspace = true }
